<resources>
    <string name="app_name">Lector Códigos</string>
    <!-- Main Menu -->

    <string name="leer">Nueva Lectura</string>
    <string name="abrir">Abrir Fichero</string>
    <string name="eliminar">Eliminar Ficheros</string>
    <string name="salir">Salir</string>

    <!-- Lector Menu -->

    <string name="guardar">Guardar</string>
    <string name="enviar">Enviar al Servidor</string>
    <string name="borrar">Limpiar</string>
    <string name="cancelar">Cancelar</string>

    <!-- Escaner Menu -->
    <string name="flash">Flash ON/OFF</string>

    <!-- Botones -->

    <string name="escaner">Leer Código</string>

    <!-- Save -->
    <string name="save">Escribe el nombre del fichero: Un nombre descriptivo de la lectura que estas haciendo para que luego puedas continuar con la misma</string>

    <!-- Text Pain -->
    <string name="nombre">Introduce el nombre del fichero</string>

    <!-- Firma -->
    <string name="firma">Lector personalizado para Curtidos Lajara</string>

    <!-- Modal Pies -->
    <string name="texto_pies">Introduce la cantidad de pies</string>

    <!-- Recycled Lector -->
    <string name="partida">Partida</string>
    <string name="total_pies">Total Pies</string>
    <string name="modifica_pies">Modificar</string>
    <string name="elimina_partida">Eliminar</string>

    <!-- Recycled Deglose-->
    <string name="paquete">Paquete</string>
    <string name="pies">Pies</string>
    <string name="editar">Editar</string>

    <!-- Alert Dialog-->
    <string name="yes">Ok</string>

    <string-array name="array_nombres">
        <item>Leo</item>
        <item>Reme</item>
        <item>Pedro</item>
        <item>Malen</item>
        <item>Lara</item>
        <item>Isa</item>
    </string-array>


</resources>
