<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Desglose">

    <LinearLayout
        android:id="@+id/cabeceradesglose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/paquete"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/paquete"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pies"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pies"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eliminar"
            android:layout_width="40dp"
            android:layout_height="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/elimina_partida"
            android:textAlignment="center"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/editar"
            android:layout_width="40dp"
            android:layout_height="21dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/editar"
            android:textAlignment="center"
            android:textStyle="bold" />



    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/desgloselineas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/btGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="25dp"
        android:onClick="guardar"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="25dp"
        android:text="@string/cancelar"
        android:onClick="cancelarbt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>